<resources>
    <string name="app_name">Ride Share</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_maps">Map</string>
    <string name="login" />
    <string name="logIn">Log In</string>
    <string name="Signup">Sign Up</string>
    <string name="Username"></string>
    <string name="phone"></string>
    <string name="Lastname"></string>
    <string name="Firstname"></string>
    <string name="pass"></string>
    <string name="text1">Please Sign Up</string>
    <string name="firstnam">Enter First Name</string>
    <string name="lastnam">Enter Surname</string>
    <string name="phon">Enter Phone Number</string>
    <string name="use">Enter Username(ADM No.)</string>
    <string name="pas">Enter Password</string>
    <string name="log">Log In !!!</string>
    <string name="carre">Register Your Car</string>
    <string name="carp"></string>
    <string name="cartype" />
    <string name="descrip" />
    <string name="Regis">Register</string>
    <string name="Hom">Home</string>
    <string name="User" />
</resources>
