<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarRegistration">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        android:text="@string/carre"
        app:layout_constraintBottom_toTopOf="@+id/Usernam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Usernam"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:text="@string/Username"
        app:layout_constraintBottom_toTopOf="@+id/plate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/plate"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="Car Plate Number"
        android:inputType="textPersonName"
        android:text="@string/carp"
        app:layout_constraintBottom_toTopOf="@+id/carType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Usernam" />

    <EditText
        android:id="@+id/carType"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="Car Type"
        android:inputType="textPersonName"
        android:text="@string/cartype"
        app:layout_constraintBottom_toTopOf="@+id/Desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plate" />

    <EditText
        android:id="@+id/Desc"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="233dp"
        android:ems="10"
        android:hint="Car Description"
        android:inputType="textPersonName"
        android:text="@string/descrip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carType" />

    <Button
        android:id="@+id/register"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="17dp"
        android:text="@string/Regis"
        android:onClick="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="17dp"
        android:text="@string/Hom"
        android:onClick="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>