<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/Usrnam"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Username(ADM No.)"
        android:inputType="textPersonName|number"
        android:text="@string/User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Passwrd"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="6dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@string/pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="254dp"
        android:layout_marginBottom="17dp"
        android:text="@string/Signup"
        android:onClick="SignuP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/log"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="17dp"
        android:text="@string/logIn"
        android:onClick="LogIN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="368dp"
        android:layout_height="15dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="1dp"
        android:text="@string/log"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/Usrnam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Passwrd"
        app:layout_constraintVertical_bias="0.39" />

</android.support.constraint.ConstraintLayout>